// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article summary headline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="3"
  style={
    Object {
      "color": "black",
      "fontFamily": "TimesModern-Bold",
      "fontSize": 22,
      "fontWeight": "900",
      "includeFontPadding": false,
      "lineHeight": 27,
      "marginBottom": 5,
    }
  }
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;

exports[`2. article summary strapline component 1`] = `
<Text
  accessibilityRole="header"
  aria-level="4"
  style={
    Object {
      "color": "black",
      "fontFamily": "TimesModern-Regular",
      "fontSize": 22,
      "includeFontPadding": false,
      "lineHeight": 24,
      "paddingBottom": 0,
      "paddingTop": 0,
    }
  }
>
  PM hails breakthrough ahead of key Commons vote
</Text>
`;
